--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -4,8 +4,16 @@ server:
 spring:
   application:
     name: client
+  datasource:
+    url: jdbc:oracle:thin:@localhost:1521:orcl
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    username: zhaoliu
+    password: abc
+
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:5555/eureka/
+mybatis:
+  mapper-locations: classpath*:/mapper/*.xml
